# regbot

./: Cargo.toml  readme.md  regbot.service
src/: cmds.rs  db.rs  ir.rs  ir_watcher.rs  main.rs
