[package]
name = "regbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
base64 = "0.13.0"
anyhow = { version="1", features=["backtrace"] }
chrono = { version="0.4.19", features=["serde"] }
itertools = "0.10"
rusqlite = { version= "0.28", features=["serde_json","bundled","trace"] }

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "cache", "model"]